add javadoc
add javadoc
use Map.of